Execution context is persisted in database.